# 56_AINewsDiscordBot

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run.bat  run.sh
.agents/skills/debug/: SKILL.md
.agents/skills/merge/: SKILL.md
.agents/skills/mobile-debug/: SKILL.md
.agents/skills/work/: SKILL.md
.claude/skills/ask/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/desktop-debug/: SKILL.md
.claude/skills/merge/: SKILL.md
.claude/skills/mobile-debug/: SKILL.md
docs/: implementation-plan.md  operations.md
memory-bank/: activeContext.md  debug-policy.md  design-api.md  design-architecture.md  design-database.md  design-sitemap.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
prompts/: news_collection_system.txt  news_collection_user.txt  news_dedupe_system.txt  news_dedupe_user.txt
scripts/: check_mobile_release_gate.ps1
src/: __init__.py  logging_config.py  main.py
src/bot/: __init__.py  discord_publisher.py
src/clients/: grok_client.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  news.py
src/prompts/: __init__.py  loader.py
src/scheduler/: __init__.py  daily_scheduler.py
src/services/: app_runner.py  collector.py  event_deduper.py  filtering.py  summarizer.py
src/storage/: sqlite_repository.py
tests/: test_app_runner.py  test_collector.py  test_discord_publisher.py  test_event_deduper.py  test_filtering.py  test_grok_client.py  test_main.py  test_prompt_loader.py  test_settings.py  test_sqlite_repository.py  test_summarizer.py
(+1 files in other folders)
